--- a/css/styles.css
+++ b/css/styles.css
@@ -6,24 +6,46 @@
 
 .main-article{
     display: flex;
-    justify-content: space-around;
-}
-
-.-main-logo{
-    display: flex;
+    justify-content: space-evenly;
 }
 
 .container-banner{
+    flex: 1;
+}
+
+.main-logo{
+    height: 75px;
+    width: 75px;
+    background-image: url(../logotravel.png);
+    background-position: center;
+    border-radius: 50%;
+}
+
+nav{
     display: flex;
-    justify-content: center;
+    align-items: center;
+}
+
+.navbar{
+    color: black;
+    text-decoration: none;
+    border: 1px solid;
+    padding: 10px;
 }
 
 .main-article-header{
     text-align: center;
 }
 
-.main-article-header h1{
-    text-align: center;
+header, main{
+    margin: 32px;
+}
+
+.banner-autoslide{
+    height: 250px;
+    background-image: url(../banner1.jpg);
+    background-position: center;
+    background-size: cover;
 }
 
 .our-package-header{
@@ -31,5 +53,9 @@
 }
 
 .our-package-content{
+    text-align: center;
+}
+
+footer{
     text-align: center;
 }
